--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 10-17-04: Added 'Tested & Confirmed' 9 character slot support. [AlexKreuz]
- 10-17-04: ISCS: Moved default channel back to #Fusion. [AlexKreuz]
- 10-16-04: REED: Optimized Castle/Parties/Guild Loading. [AlexKreuz]
- 10-16-04: REED: Restructured Castle Saving. [AlexKreuz]
- 10-16-04: ISCS: Provided option to turn off ISCS on startup. [AlexKreuz]
- 10-16-04: REED: Restructured Guild saving (2/2). [AlexKreuz]
- 10-15-04: Cleaned up the structure of #hcolor and #ccolor. [Trihan]
- 10-15-04: Cleaned up the structure of #auto. [Trihan]
- 10-15-04: Cleaned up the structure of #alive and #item. [Trihan]
- 10-15-04: Made some changes to @where. [Trihan]
- 10-15-04: REED: Restructured Guild saving (1/2). [AlexKreuz]
- 10-15-04: Uncommented packet debugs from game.pas -- Pay attention when committing. [AlexKreuz]
- 10-14-04: Added @whomap, @whomap2 and @whomap3. [Trihan]
- 10-14-04: Added High jobs to @who2. [Tsusai]
- 10-14-04: Fixed GM_JOB to display new job number correctly. [Tsusai]
- 10-14-04: JCon: Fixed High Job display and saving. [Tsusai]
- 10-14-04: Modified @who, @who2 and @who3 to accept matchtext and show GM levels. [Trihan]
- 10-14-04: Retabbed script.pas & added NPC command 'gstore' (guild storage). [Tsusai]
- 10-13-04: Fixed index out of bounds errors with @kickall, @raise, @raisemap, @doom. [Trihan]
- 10-13-04: Fixed an error in #autoloot that made it activate #auto instead. [Trihan]
- 10-13-04: REED: Restructured Party saving. [AlexKreuz]
- 10-13-04: REED: Restructured Pet saving. [AlexKreuz]
- 10-13-04: Added @save, @load, @kick, @kickall, @raise, @raisemap. [Trihan]
- 10-13-04: Fixed a problem with Tiko's @doom. (GM_ATHENA_ITEM instead of GM_ATHENA_DOOM). [Trihan]
- 10-12-04: Added a DNS Updater timer. Default is off. [Tsusai]